feat: Update dependencies and add startup library, and fix Gradle lint error
This commit updates several dependencies and introduces the AndroidX Startup library.

Specific changes include:
- Added `androidx.startup:startup-runtime` to `libs.versions.toml` and `app/build.gradle.kts`.
- Updated `android.androidResources.enable = false` in `core/build.gradle.kts`.
- Added `projects.services.managerService` to dependencies in `core/build.gradle.kts`.
- Added `@SuppressLint("RestrictedApi")` to several methods in `SubtitleCollapsingTextHelper.java` and `SubtitleCollapsingToolbarLayout.java`.
- Updated version text in `item_module.xml` from `1.8.1` to `1.9.1`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,8 @@ androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui"
 androidx-preference = { module = "androidx.preference:preference", version = "1.2.1" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.4.0" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version = "1.2.0-beta01" }
+#noinspection GradleDependency
+androidx-startup = { module = "androidx.startup:startup-runtime", version = "1.1.1" }
 
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide" }
